<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.activities.DashboardActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/app_bar_layout"
            android:background="#fff"
            android:elevation="4dp"
            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center_vertical"
                />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
            android:layout_marginTop="@dimen/defaultDpMargin"
            android:padding="@dimen/mediumPadding"
            >

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logged_by"
                android:textSize="@dimen/mediumTextSize"
                android:textColor="@color/black"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/eightDpMargin"
                android:id="@+id/logged_by_view"
                android:text="N/A"
                android:textSize="@dimen/mediumTextSize"
                android:textColor="@color/primary_dark"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/buttons_wrapper_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/sixtyDpMargin"
            android:gravity="center_horizontal"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_tag_line"
                android:textSize="@dimen/largeTextSize"
                android:textColor="@color/primary"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:text="@string/lot_module_text"
                android:textColor="@color/white"
                android:textSize="@dimen/largeTextSize"
                android:id="@+id/lot_scan_button"
                android:layout_marginTop="@dimen/sixtyDpMargin"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:layout_marginTop="@dimen/sixtyDpMargin"
                android:text="@string/sample_module_text"
                android:textColor="@color/white"
                android:textSize="@dimen/largeTextSize"
                android:id="@+id/sample_location_scan_button"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:layout_marginTop="@dimen/sixtyDpMargin"
                android:text="@string/igp_module_text"
                android:textColor="@color/white"
                android:textSize="@dimen/largeTextSize"
                android:id="@+id/igp_scan_button"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:layout_marginTop="@dimen/sixtyDpMargin"
                android:text="@string/stock_module_text"
                android:textColor="@color/white"
                android:textSize="@dimen/largeTextSize"
                android:id="@+id/stock_scan_button"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:text="@string/supplier_lot_module_text"
                android:textColor="@color/white"
                android:textSize="@dimen/largeTextSize"
                android:id="@+id/supplier_lot_button"
                android:layout_marginTop="@dimen/sixtyDpMargin"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/defaultDpMargin"
            android:text="@string/powerd_by"
            android:textColor="@color/red"
            android:textSize="@dimen/mediumTextSize"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/defaultDpMargin"
            android:id="@+id/app_version_view"
            android:textColor="@color/black"
            android:textSize="@dimen/smallTextSize"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>