<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_parent_layout"
    tools:context=".view.activities.LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/login_wrapper_layout"
        android:padding="@dimen/smallPadding"
        android:layout_margin="@dimen/sixtyDpMargin"
        android:gravity="center_horizontal"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="@dimen/largeTextSize"
            android:textColor="@color/primary_dark"
            android:textAllCaps="true"
            android:textStyle="bold"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/texteditboxdesign"
            android:layout_marginTop="@dimen/sixtyDpMargin"
            android:inputType="textEmailAddress"
            android:hint="@string/user_id"
            android:id="@+id/login_user_id_box"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/texteditboxdesign"
            android:layout_marginTop="@dimen/sixtyDpMargin"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:id="@+id/login_password_box"
            />

         <androidx.appcompat.widget.AppCompatButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/round_button"
             android:layout_marginTop="@dimen/sixtyDpMargin"
             android:text="@string/login"
             android:textColor="@color/white"
             android:textSize="@dimen/largeTextSize"
             android:id="@+id/login_button"
             />

       <androidx.appcompat.widget.LinearLayoutCompat
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:gravity="center_vertical"
           android:layout_marginTop="@dimen/eightDpMargin"
           android:id="@+id/biometric_option_wrapper_layout"
           android:visibility="gone"
           >
           <androidx.appcompat.widget.AppCompatImageView
               android:layout_width="48dp"
               android:layout_height="48dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toBottomOf="@id/login_wrapper_layout"
               android:src="@drawable/ic_fingerprint"
               app:tint="@color/primary"
               />
           <com.google.android.material.textview.MaterialTextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/biometric_login_hint"
               android:textSize="@dimen/largeTextSize"
               />
           <com.google.android.material.switchmaterial.SwitchMaterial
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:id="@+id/biometric_switch"
               />
       </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_wrapper_layout"
        android:src="@drawable/ic_fingerprint"
        android:background="@drawable/round_button"
        android:id="@+id/login_fingerprint_imageview"
        android:layout_marginTop="@dimen/eightDpMargin"
        android:visibility="gone"
        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/defaultDpMargin"
        android:id="@+id/app_version_view"
        android:textColor="@color/black"
        android:textSize="@dimen/smallTextSize"
        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/change_ip"
        android:visibility="gone"
        android:layout_margin="@dimen/eightDpMargin"
        android:id="@+id/change_ip_view"
        android:textAllCaps="true"
        android:textColor="@color/primary"
        android:textSize="@dimen/mediumTextSize"
        />

</androidx.constraintlayout.widget.ConstraintLayout>